Add explosive void (temporary texture)

--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -16,6 +16,7 @@
   "item.soulinmod.gray_dye_edible": "Gray Dye (edible)",
   "item.soulinmod.dark_matter": "Dark Matter",
   "item.soulinmod.mail_sachel": "Mail Sachel",
+  "block.soulinmod.explosive_void": "Explosive Void",
   "item.soulinmod.cyan_dye_edible": "Cyan Dye (edible)",
   "item.soulinmod.memory_of_the_lost": "Memory Of The Lost",
   "itemGroup.tabsoul_items": "Soulintary",
