English Potion. English Potion.

--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -3,7 +3,9 @@
   "item.soulinmod.glitter_and_gold.desc": "Barns Courtney - Glitter And Gold",
   "item.soulinmod.brown_dye_edible": "Brown Dye (edible)",
   "block.soulinmod.spookyblock": "Spookyblock",
+  "effect.english_potion": "English Potion",
   "block.soulinmod.plant_core_c": "Plant Core C",
+  "item.minecraft.lingering_potion.effect.english_potion": "Lingering English Potion",
   "block.soulinmod.void_animated_stairs": "Void Stairs",
   "itemGroup.tabsoulintary_music": "Soulintary Music",
   "item.soulinmod.white_dye_edible": "White Dye (edible)",
@@ -19,6 +21,7 @@
   "block.soulinmod.explosive_void": "Explosive Void",
   "item.soulinmod.cyan_dye_edible": "Cyan Dye (edible)",
   "item.soulinmod.memory_of_the_lost": "Memory Of The Lost",
+  "item.minecraft.potion.effect.english_potion": "English Potion",
   "itemGroup.tabsoul_items": "Soulintary",
   "item.soulinmod.green_dye_edible": "Green Dye (edible)",
   "item.soulinmod.lime_dye_edible": "Lime Dye (edible)",
@@ -29,12 +32,14 @@
   "item.soulinmod.black_dye_edible": "Black Dye (edible)",
   "block.soulinmod.void_animated_slab": "Void Animated",
   "item.soulinmod.purple_dye_edible": "Black Dye (edible)",
+  "item.minecraft.tipped_arrow.effect.english_potion": "Arrow of English Potion",
   "item.soulinmod.glitter_and_gold": "Glitter And Gold",
   "item.soulinmod.blue_dye_edible": "Blue Dye (edible)",
   "item.soulinmod.light_blue_dye_edible": "Light Blue Dye (edible)",
   "item.soulinmod.void_essense": "Void Essense",
   "block.soulinmod.void_block": "Void Block",
   "block.soulinmod.void_animated": "Void Animated",
+  "item.minecraft.splash_potion.effect.english_potion": "Splash English Potion",
   "item.soulinmod.magenta_dye_edible": "Magenta Dye (edible)",
   "item.soulinmod.nectar_bucket": "Nectar Bucket",
   "item.soulinmod.orange_dye_edible": "Orange Dye (edible)",
