--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -17,6 +17,7 @@
   "item.soulinmod.dark_matter": "Dark Matter",
   "item.soulinmod.mail_sachel": "Mail Sachel",
   "block.soulinmod.explosive_void": "Explosive Void",
+  "item.soulinmod.void_chunk": "Void Chunk",
   "item.soulinmod.cyan_dye_edible": "Cyan Dye (edible)",
   "item.soulinmod.memory_of_the_lost": "Memory Of The Lost",
   "itemGroup.tabsoul_items": "Soulintary",
@@ -27,7 +28,7 @@
   "item.soulinmod.mortar_and_pestle": "Mortar And Pestle",
   "block.soulinmod.hardened_void": "Hardened Void",
   "item.soulinmod.black_dye_edible": "Black Dye (edible)",
-  "block.soulinmod.void_animated_slab": "Void Animated",
+  "block.soulinmod.void_animated_slab": "Void Slab",
   "item.soulinmod.purple_dye_edible": "Black Dye (edible)",
   "item.soulinmod.glitter_and_gold": "Glitter And Gold",
   "item.soulinmod.blue_dye_edible": "Blue Dye (edible)",
