--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -1,40 +1,51 @@
 {
   "item.soulinmod.glowing_nectar_bucket": "GlowingNectar Bucket",
-  "item.soulinmod.glitter_and_gold.desc": "Barns Courtney - Glitter And Gold",
-  "item.soulinmod.brown_dye_edible": "Brown Dye (edible)",
   "block.soulinmod.spookyblock": "Spookyblock",
+  "effect.nectard": "Nectar\u0027d",
+  "item.minecraft.potion.effect.nectard": "Nectard",
   "block.soulinmod.plant_core_c": "Plant Core C",
-  "itemGroup.tabsoulintary_music": "Soulintary Music",
   "item.soulinmod.white_dye_edible": "White Dye (edible)",
-  "block.soulinmod.void_animated_stairs": "Void Stairs",
+  "itemGroup.tabsoulintary_music": "Soulintary Music",
   "item.soulinmod.memory_of_the_lost.desc": "Code Vein - Memory Of The Lost",
-  "item.soulinmod.pink_dye_edible": "Pink Dye (edible)",
   "fluid.nectar": "Nectar",
-  "item.soulinmod.dark_matter.desc": "Les Friction - Dark Matter",
   "item.soulinmod.red_dye_edible": "Red Dye (edible)",
-  "item.soulinmod.bembo_feather": "Bembo Feather",
+  "item.soulinmod.dark_matter.desc": "Les Friction - Dark Matter",
   "item.soulinmod.gray_dye_edible": "Gray Dye (edible)",
   "item.soulinmod.dark_matter": "Dark Matter",
+  "item.soulinmod.void_chunk": "Void Chunk",
+  "item.soulinmod.memory_of_the_lost": "Memory Of The Lost",
+  "itemGroup.tabsoul_items": "Soulintary",
+  "item.soulinmod.lime_dye_edible": "Lime Dye (edible)",
+  "item.soulinmod.black_dye_edible": "Black Dye (edible)",
+  "item.minecraft.lingering_potion.effect.nectard": "Lingering Nectard",
+  "item.soulinmod.blue_dye_edible": "Blue Dye (edible)",
+  "block.soulinmod.void_block": "Void Block",
+  "item.minecraft.splash_potion.effect.english_potion": "Splash English Potion",
+  "block.soulinmod.void_animated": "Void Animated",
+  "item.minecraft.tipped_arrow.effect.nectard": "Arrow of Nectard",
+  "item.soulinmod.glitter_and_gold.desc": "Barns Courtney - Glitter And Gold",
+  "item.soulinmod.brown_dye_edible": "Brown Dye (edible)",
+  "effect.english_potion": "English Potion",
+  "item.minecraft.lingering_potion.effect.english_potion": "Lingering English Potion",
+  "block.soulinmod.void_animated_stairs": "Void Stairs",
+  "item.soulinmod.pink_dye_edible": "Pink Dye (edible)",
+  "item.soulinmod.bembo_feather": "Bembo Feather",
   "item.soulinmod.mail_sachel": "Mail Sachel",
   "block.soulinmod.explosive_void": "Explosive Void",
   "item.soulinmod.cyan_dye_edible": "Cyan Dye (edible)",
-  "item.soulinmod.memory_of_the_lost": "Memory Of The Lost",
-  "itemGroup.tabsoul_items": "Soulintary",
+  "item.minecraft.potion.effect.english_potion": "English Potion",
   "item.soulinmod.green_dye_edible": "Green Dye (edible)",
-  "item.soulinmod.lime_dye_edible": "Lime Dye (edible)",
   "item.soulinmod.yellow_dye_edible": "Yellow Dye (edible)",
   "item.soulinmod.light_gray_dye_edible": "Light Gray Dye (edible)",
   "item.soulinmod.mortar_and_pestle": "Mortar And Pestle",
-  "item.soulinmod.black_dye_edible": "Black Dye (edible)",
   "block.soulinmod.hardened_void": "Hardened Void",
-  "block.soulinmod.void_animated_slab": "Void Animated",
+  "block.soulinmod.void_animated_slab": "Void Slab",
   "item.soulinmod.purple_dye_edible": "Black Dye (edible)",
-  "item.soulinmod.blue_dye_edible": "Blue Dye (edible)",
+  "item.minecraft.tipped_arrow.effect.english_potion": "Arrow of English Potion",
   "item.soulinmod.glitter_and_gold": "Glitter And Gold",
   "item.soulinmod.light_blue_dye_edible": "Light Blue Dye (edible)",
   "item.soulinmod.void_essense": "Void Essense",
-  "block.soulinmod.void_block": "Void Block",
-  "block.soulinmod.void_animated": "Void Animated",
+  "item.minecraft.splash_potion.effect.nectard": "Splash Nectard",
   "item.soulinmod.magenta_dye_edible": "Magenta Dye (edible)",
   "item.soulinmod.nectar_bucket": "Nectar Bucket",
   "item.soulinmod.orange_dye_edible": "Orange Dye (edible)",
