Crystal void added, black block added,

--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.soulinmod.glowing_nectar_bucket": "GlowingNectar Bucket",
+  "block.soulinmod.crystalized_void": "Crystalized Void",
   "effect.nectard": "Nectar\u0027d",
   "block.soulinmod.spookyblock": "Spookyblock",
   "item.minecraft.potion.effect.nectard": "Nectard",
@@ -24,6 +25,7 @@
   "item.minecraft.splash_potion.effect.english_potion": "Splash English Potion",
   "block.soulinmod.void_animated": "Void Animated",
   "item.minecraft.tipped_arrow.effect.nectard": "Arrow of Nectard",
+  "block.soulinmod.black_block": "Black Block",
   "item.soulinmod.glitter_and_gold.desc": "Barns Courtney - Glitter And Gold",
   "item.soulinmod.brown_dye_edible": "Brown Dye (edible)",
   "effect.english_potion": "English Potion",
