--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.soulinmod.glowing_nectar_bucket": "GlowingNectar Bucket",
   "block.soulinmod.crystalized_void": "Crystalized Void",
+  "block.soulinmod.rainy_window_no_border": "Rainy Window Border",
   "effect.nectard": "Nectar\u0027d",
   "block.soulinmod.spookyblock": "Spookyblock",
   "item.minecraft.potion.effect.nectard": "Nectard",
@@ -11,6 +12,8 @@
   "fluid.nectar": "Nectar",
   "item.soulinmod.red_dye_edible": "Red Dye (edible)",
   "item.soulinmod.dark_matter.desc": "Les Friction - Dark Matter",
+  "block.soulinmod.anti_void_stairs": "Anti Void Stairs",
+  "block.soulinmod.anti_void_slab": "Anti Void Slab",
   "item.soulinmod.gray_dye_edible": "Gray Dye (edible)",
   "item.soulinmod.dark_matter": "Dark Matter",
   "item.soulinmod.void_chunk": "Void Chunk",
@@ -21,17 +24,21 @@
   "item.soulinmod.black_dye_edible": "Black Dye (edible)",
   "item.minecraft.lingering_potion.effect.nectard": "Lingering Nectard",
   "item.soulinmod.blue_dye_edible": "Blue Dye (edible)",
+  "block.soulinmod.anti_void": "Anti Void",
   "block.soulinmod.void_block": "Void Block",
+  "block.soulinmod.rainy_window_border_pain": "Rainy Window Border Pane",
   "item.minecraft.splash_potion.effect.english_potion": "Splash English Potion",
   "block.soulinmod.void_animated": "Void Animated",
   "item.minecraft.tipped_arrow.effect.nectard": "Arrow of Nectard",
   "block.soulinmod.black_block": "Black Block",
+  "block.soulinmod.rainy_window_border": "Rainy Window Border",
   "item.soulinmod.glitter_and_gold.desc": "Barns Courtney - Glitter And Gold",
   "item.soulinmod.brown_dye_edible": "Brown Dye (edible)",
   "effect.english_potion": "English Potion",
   "item.minecraft.lingering_potion.effect.english_potion": "Lingering English Potion",
   "block.soulinmod.void_animated_stairs": "Void Stairs",
   "item.soulinmod.pink_dye_edible": "Pink Dye (edible)",
+  "block.soulinmod.rainy_window_pane": "Rainy Window Pane",
   "item.soulinmod.bembo_feather": "Bembo Feather",
   "block.soulinmod.explosive_void": "Explosive Void",
   "item.soulinmod.mail_sachel": "Mail Sachel",
