--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -2,21 +2,21 @@
   "item.soulinmod.glowing_nectar_bucket": "GlowingNectar Bucket",
   "block.soulinmod.crystalized_void": "Crystalized Void",
   "block.soulinmod.rainy_window_no_border": "Rainy Window Border",
-  "block.soulinmod.spookyblock": "Spookyblock",
   "effect.nectard": "Nectar\u0027d",
+  "block.soulinmod.spookyblock": "Spookyblock",
   "item.minecraft.potion.effect.nectard": "Nectard",
   "block.soulinmod.plant_core_c": "Plant Core C",
-  "itemGroup.tabsoulintary_music": "Soulintary Music",
   "item.soulinmod.white_dye_edible": "White Dye (edible)",
+  "itemGroup.tabsoulintary_music": "Soulintary Music",
   "item.soulinmod.memory_of_the_lost.desc": "Code Vein - Memory Of The Lost",
   "fluid.nectar": "Nectar",
-  "block.soulinmod.anti_void_slab": "Anti Void Slab",
-  "block.soulinmod.anti_void_stairs": "Anti Void Stairs",
-  "item.soulinmod.dark_matter.desc": "Les Friction - Dark Matter",
   "item.soulinmod.red_dye_edible": "Red Dye (edible)",
+  "item.soulinmod.dark_matter.desc": "Les Friction - Dark Matter",
+  "block.soulinmod.anti_void_stairs": "Anti Void Stairs",
+  "block.soulinmod.anti_void_slab": "Anti Void Slab",
   "item.soulinmod.gray_dye_edible": "Gray Dye (edible)",
-  "item.soulinmod.void_chunk": "Void Chunk",
   "item.soulinmod.dark_matter": "Dark Matter",
+  "item.soulinmod.void_chunk": "Void Chunk",
   "item.soulinmod.memory_of_the_lost": "Memory Of The Lost",
   "itemGroup.tabsoul_items": "Soulintary",
   "item.soulinmod.void_tendril": "Void Tendril",
@@ -34,6 +34,7 @@
   "block.soulinmod.rainy_window_border": "Rainy Window Border",
   "item.soulinmod.glitter_and_gold.desc": "Barns Courtney - Glitter And Gold",
   "item.soulinmod.brown_dye_edible": "Brown Dye (edible)",
+  "item.soulinmod.anti_void_clump": "Anti Void Clump",
   "effect.english_potion": "English Potion",
   "item.minecraft.lingering_potion.effect.english_potion": "Lingering English Potion",
   "block.soulinmod.void_animated_stairs": "Void Stairs",
