--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -4,6 +4,7 @@
   "block.soulinmod.rainy_window_no_border": "Rainy Window Border",
   "block.soulinmod.spookyblock": "Spookyblock",
   "block.soulinmod.plant_core_c": "Plant Core C",
+  "item.soulinmod.nectar_bottle": "Nectar Bottle",
   "itemGroup.tabsoulintary_music": "Soulintary Music",
   "item.soulinmod.white_dye_edible": "White Dye (edible)",
   "item.soulinmod.memory_of_the_lost.desc": "Code Vein - Memory Of The Lost",
@@ -21,14 +22,18 @@
   "item.soulinmod.lime_dye_edible": "Lime Dye (edible)",
   "item.soulinmod.black_dye_edible": "Black Dye (edible)",
   "item.soulinmod.blue_dye_edible": "Blue Dye (edible)",
+  "block.soulinmod.nectar_block_placeholder": "Nectar Block Placeholder",
   "block.soulinmod.anti_void": "Anti Void",
   "block.soulinmod.rainy_window_border_pain": "Rainy Window Border Pane",
   "block.soulinmod.void_animated": "Void",
+  "item.soulinmod.bucketemptynectar": "Bucketemptynectar",
   "block.soulinmod.black_block": "Black Block",
   "block.soulinmod.rainy_window_border": "Rainy Window Border",
   "item.soulinmod.glitter_and_gold.desc": "Barns Courtney - Glitter And Gold",
   "item.soulinmod.brown_dye_edible": "Brown Dye (edible)",
   "item.soulinmod.anti_void_clump": "Anti Void Clump",
+  "item.soulinmod.nectar_bottle_empty": "Nectar Bottle Empty",
+  "item.soulinmod.nectar_bucket_full": "Nectar Bucket",
   "block.soulinmod.void_animated_stairs": "Void Stairs",
   "item.soulinmod.pink_dye_edible": "Pink Dye (edible)",
   "block.soulinmod.rainy_window_pane": "Rainy Window Pane",
