Placable variants of Nectar Blocks

--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -23,6 +23,7 @@
   "item.soulinmod.black_dye_edible": "Black Dye (edible)",
   "item.soulinmod.blue_dye_edible": "Blue Dye (edible)",
   "block.soulinmod.nectar_block_placeholder": "Nectar Block Placeholder",
+  "block.soulinmod.glowing_nectar_placable": "Nectar Block Placeholder",
   "block.soulinmod.anti_void": "Anti Void",
   "block.soulinmod.rainy_window_border_pain": "Rainy Window Border Pane",
   "block.soulinmod.void_animated": "Void",
