--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -4,19 +4,18 @@
   "block.soulinmod.rainy_window_no_border": "Rainy Window Border",
   "block.soulinmod.spookyblock": "Spookyblock",
   "block.soulinmod.plant_core_c": "Plant Core C",
-  "item.soulinmod.nectar_bottle": "Nectar Bottle",
-  "itemGroup.tabsoulintary_music": "Soulintary Music",
   "item.soulinmod.white_dye_edible": "White Dye (edible)",
+  "itemGroup.tabsoulintary_music": "Soulintary Music",
   "item.soulinmod.memory_of_the_lost.desc": "Code Vein - Memory Of The Lost",
   "fluid.nectar": "Nectar",
-  "block.soulinmod.anti_void_slab": "Anti Void Slab",
-  "block.soulinmod.anti_void_stairs": "Anti Void Stairs",
-  "item.soulinmod.dark_matter.desc": "Les Friction - Dark Matter",
   "item.soulinmod.red_dye_edible": "Red Dye (edible)",
+  "item.soulinmod.dark_matter.desc": "Les Friction - Dark Matter",
+  "block.soulinmod.anti_void_stairs": "Anti Void Stairs",
+  "block.soulinmod.anti_void_slab": "Anti Void Slab",
   "item.soulinmod.badapple": "Bioweapon (Lily Track 2)",
   "item.soulinmod.gray_dye_edible": "Gray Dye (edible)",
-  "item.soulinmod.void_chunk": "Void Chunk",
   "item.soulinmod.dark_matter": "Dark Matter",
+  "item.soulinmod.void_chunk": "Void Chunk",
   "item.soulinmod.memory_of_the_lost": "Memory Of The Lost",
   "itemGroup.tabsoul_items": "Soulintary",
   "item.soulinmod.void_tendril": "Void Tendril",
@@ -30,21 +29,21 @@
   "block.soulinmod.void_block": "Void Block",
   "block.soulinmod.rainy_window_border_pain": "Rainy Window Border Pane",
   "block.soulinmod.void_animated": "Void",
-  "item.soulinmod.bucketemptynectar": "Bucketemptynectar",
   "block.soulinmod.black_block": "Black Block",
   "block.soulinmod.rainy_window_border": "Rainy Window Border",
   "item.soulinmod.glitter_and_gold.desc": "Barns Courtney - Glitter And Gold",
   "item.soulinmod.brown_dye_edible": "Brown Dye (edible)",
   "item.soulinmod.anti_void_clump": "Anti Void Clump",
-  "item.soulinmod.nectar_bottle_empty": "Nectar Bottle Empty",
-  "item.soulinmod.nectar_bucket_full": "Nectar Bucket",
+  "item.soulinmod.nectar_bottle_empty": "Empty Vial",
   "block.soulinmod.void_animated_stairs": "Void Stairs",
   "item.soulinmod.pink_dye_edible": "Pink Dye (edible)",
+  "item.soulinmod.glowing_nectar_food": "Vial of Glowing Nectar",
   "block.soulinmod.rainy_window_pane": "Rainy Window Pane",
   "item.soulinmod.bembo_feather": "Bembo Feather",
   "block.soulinmod.explosive_void": "Explosive Void",
   "item.soulinmod.mail_sachel": "Mail Sachel",
   "item.soulinmod.cyan_dye_edible": "Cyan Dye (edible)",
+  "item.soulinmod.nectar_bottle_food": "Vial of Nectar",
   "item.soulinmod.green_dye_edible": "Green Dye (edible)",
   "item.soulinmod.yellow_dye_edible": "Yellow Dye (edible)",
   "item.soulinmod.light_gray_dye_edible": "Light Gray Dye (edible)",
