--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -1,21 +1,22 @@
 {
   "item.soulinmod.glowing_nectar_bucket": "Glowing Nectar Bucket",
+  "item.soulinmod.flower_crownboots": "Flower Crown Boots",
   "block.soulinmod.crystalized_void": "Crystalized Void",
   "block.soulinmod.rainy_window_no_border": "Rainy Window Border",
   "block.soulinmod.spookyblock": "Spookyblock",
   "block.soulinmod.plant_core_c": "Plant Core C",
-  "item.soulinmod.white_dye_edible": "White Dye (edible)",
   "itemGroup.tabsoulintary_music": "Soulintary Music",
+  "item.soulinmod.white_dye_edible": "White Dye (edible)",
   "item.soulinmod.memory_of_the_lost.desc": "Code Vein - Memory Of The Lost",
   "fluid.nectar": "Nectar",
-  "item.soulinmod.red_dye_edible": "Red Dye (edible)",
-  "item.soulinmod.dark_matter.desc": "Les Friction - Dark Matter",
-  "block.soulinmod.anti_void_stairs": "Anti Void Stairs",
   "block.soulinmod.anti_void_slab": "Anti Void Slab",
+  "block.soulinmod.anti_void_stairs": "Anti Void Stairs",
+  "item.soulinmod.dark_matter.desc": "Les Friction - Dark Matter",
+  "item.soulinmod.red_dye_edible": "Red Dye (edible)",
   "item.soulinmod.badapple": "Bioweapon (Lily Track 2)",
   "item.soulinmod.gray_dye_edible": "Gray Dye (edible)",
-  "item.soulinmod.dark_matter": "Dark Matter",
   "item.soulinmod.void_chunk": "Void Chunk",
+  "item.soulinmod.dark_matter": "Dark Matter",
   "item.soulinmod.memory_of_the_lost": "Memory Of The Lost",
   "itemGroup.tabsoul_items": "Soulintary",
   "item.soulinmod.void_tendril": "Void Tendril",
@@ -31,6 +32,7 @@
   "block.soulinmod.void_animated": "Void",
   "block.soulinmod.black_block": "Black Block",
   "block.soulinmod.rainy_window_border": "Rainy Window Border",
+  "item.soulinmod.flower_crownlegs": "Flower Crown Leggings",
   "item.soulinmod.glitter_and_gold.desc": "Barns Courtney - Glitter And Gold",
   "item.soulinmod.brown_dye_edible": "Brown Dye (edible)",
   "item.soulinmod.anti_void_clump": "Anti Void Clump",
@@ -44,6 +46,7 @@
   "item.soulinmod.mail_sachel": "Mail Sachel",
   "item.soulinmod.cyan_dye_edible": "Cyan Dye (edible)",
   "item.soulinmod.nectar_bottle_food": "Vial of Nectar",
+  "item.soulinmod.flower_crownbody": "Flower Crown Body",
   "item.soulinmod.green_dye_edible": "Green Dye (edible)",
   "item.soulinmod.yellow_dye_edible": "Yellow Dye (edible)",
   "item.soulinmod.light_gray_dye_edible": "Light Gray Dye (edible)",
@@ -51,9 +54,11 @@
   "block.soulinmod.hardened_void": "Hardened Void",
   "block.soulinmod.void_animated_slab": "Void Slab",
   "item.soulinmod.purple_dye_edible": "Black Dye (edible)",
+  "block.soulinmod.star_chunk": "Star Chunk",
   "item.soulinmod.glitter_and_gold": "Glitter And Gold",
   "item.soulinmod.light_blue_dye_edible": "Light Blue Dye (edible)",
   "item.soulinmod.void_essense": "Void Essense",
+  "item.soulinmod.flower_crownhelmet": "Flower Crown",
   "item.soulinmod.magenta_dye_edible": "Magenta Dye (edible)",
   "item.soulinmod.nectar_bucket": "Nectar Bucket",
   "item.soulinmod.orange_dye_edible": "Orange Dye (edible)",
