--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -6,26 +6,27 @@
   "block.soulinmod.spookyblock": "Spookyblock",
   "block.soulinmod.plant_core_c": "Plant Core C",
   "item.soulinmod.nectar_bottle": "Nectar Bottle",
-  "itemGroup.tabsoulintary_music": "Soulintary Music",
   "item.soulinmod.white_dye_edible": "White Dye (edible)",
+  "itemGroup.tabsoulintary_music": "Soulintary Music",
   "item.soulinmod.memory_of_the_lost.desc": "Code Vein - Memory Of The Lost",
   "fluid.nectar": "Nectar",
-  "block.soulinmod.anti_void_slab": "Anti Void Slab",
-  "block.soulinmod.anti_void_stairs": "Anti Void Stairs",
-  "item.soulinmod.dark_matter.desc": "Les Friction - Dark Matter",
   "item.soulinmod.red_dye_edible": "Red Dye (edible)",
+  "item.soulinmod.dark_matter.desc": "Les Friction - Dark Matter",
+  "block.soulinmod.anti_void_stairs": "Anti Void Stairs",
+  "block.soulinmod.anti_void_slab": "Anti Void Slab",
   "item.soulinmod.badapple": "Bioweapon (Lily Track 2)",
   "item.soulinmod.gray_dye_edible": "Gray Dye (edible)",
-  "item.soulinmod.void_chunk": "Void Chunk",
   "item.soulinmod.dark_matter": "Dark Matter",
+  "item.soulinmod.void_chunk": "Void Chunk",
   "item.soulinmod.memory_of_the_lost": "Memory Of The Lost",
   "itemGroup.tabsoul_items": "Soulintary",
   "item.soulinmod.void_tendril": "Void Tendril",
   "item.soulinmod.lime_dye_edible": "Lime Dye (edible)",
+  "item.soulinmod.rocket_sword": "Rocket Sword",
   "item.soulinmod.black_dye_edible": "Black Dye (edible)",
   "item.soulinmod.blue_dye_edible": "Blue Dye (edible)",
-  "block.soulinmod.glowing_nectar_placable": "Nectar Block Placeholder",
-  "block.soulinmod.nectar_block_placeholder": "Nectar Block Placeholder",
+  "block.soulinmod.glowing_nectar_placable": "Glowing Nectar Block",
+  "block.soulinmod.nectar_block_placeholder": "Nectar Block",
   "item.soulinmod.badapple.desc": "Bioweapon - Lily Track 2",
   "block.soulinmod.anti_void": "Anti Void",
   "block.soulinmod.void_block": "Void Block",
@@ -35,30 +36,38 @@
   "block.soulinmod.black_block": "Black Block",
   "block.soulinmod.rainy_window_border": "Rainy Window Border",
   "item.soulinmod.flower_crownlegs": "Flower Crown Leggings",
+  "item.soulinmod.flower_crown_chestplate": "Flower Crown Body",
   "item.soulinmod.glitter_and_gold.desc": "Barns Courtney - Glitter And Gold",
   "item.soulinmod.brown_dye_edible": "Brown Dye (edible)",
   "item.soulinmod.anti_void_clump": "Anti Void Clump",
-  "item.soulinmod.nectar_bottle_empty": "Nectar Bottle Empty",
+  "item.soulinmod.nectar_bottle_empty": "Empty Vial",
   "item.soulinmod.nectar_bucket_full": "Nectar Bucket",
   "block.soulinmod.void_animated_stairs": "Void Stairs",
   "item.soulinmod.pink_dye_edible": "Pink Dye (edible)",
+  "item.soulinmod.glowing_nectar_food": "Vial of Glowing Nectar",
   "block.soulinmod.rainy_window_pane": "Rainy Window Pane",
   "item.soulinmod.bembo_feather": "Bembo Feather",
   "block.soulinmod.explosive_void": "Explosive Void",
   "item.soulinmod.mail_sachel": "Mail Sachel",
   "item.soulinmod.cyan_dye_edible": "Cyan Dye (edible)",
+  "item.soulinmod.nectar_bottle_food": "Vial of Nectar",
   "item.soulinmod.flower_crownbody": "Flower Crown Body",
   "item.soulinmod.green_dye_edible": "Green Dye (edible)",
+  "item.soulinmod.flower_crown_boots": "Flower Crown Boots",
   "item.soulinmod.yellow_dye_edible": "Yellow Dye (edible)",
   "item.soulinmod.light_gray_dye_edible": "Light Gray Dye (edible)",
   "item.soulinmod.mortar_and_pestle": "Mortar And Pestle",
   "block.soulinmod.hardened_void": "Hardened Void",
   "block.soulinmod.void_animated_slab": "Void Slab",
   "item.soulinmod.purple_dye_edible": "Black Dye (edible)",
+  "item.soulinmod.flower_crown_helmet": "Flower Crown",
+  "block.soulinmod.star_chunk": "Star Chunk",
   "item.soulinmod.glitter_and_gold": "Glitter And Gold",
   "item.soulinmod.light_blue_dye_edible": "Light Blue Dye (edible)",
+  "item.soulinmod.flower_crown_leggings": "Flower Crown Leggings",
   "item.soulinmod.void_essense": "Void Essense",
   "item.soulinmod.flower_crownhelmet": "Flower Crown",
+  "item.soulinmod.lily_organic_step": "Lily Organic Step",
   "item.soulinmod.magenta_dye_edible": "Magenta Dye (edible)",
   "item.soulinmod.nectar_bucket": "Nectar Bucket",
   "item.soulinmod.orange_dye_edible": "Orange Dye (edible)",
