MCreator Merge commit '6b9c51a0944f1d77fc3013f2c861e31956d26e27' into 943b252aeea0dd4914fa5bb21a5a4f077aa388db

--- a/src/main/resources/assets/soulinmod/lang/en_us.json
+++ b/src/main/resources/assets/soulinmod/lang/en_us.json
@@ -128,7 +128,7 @@
   "item.soulinmod.void_essense": "Void Essense",
   "item.soulinmod.flower_crownhelmet": "Flower Crown",
   "item.soulinmod.empty_battery": "Empty Battery",
-  "item.soulinmod.lily_organic_step": "Lily Organic Step",
+  "item.soulinmod.lily_organic_step": "Organic Step",
   "block.soulinmod.fancy_blue_window_off_pane": "Fancy Blue Window Pane (Off) (Black Rim)",
   "block.soulinmod.orange_window_3_white_pane": "Squared Orange Window Pane (White Rim)",
   "item.soulinmod.magenta_dye_edible": "Magenta Dye (edible)",
